--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -7,7 +7,7 @@ on:
     branches:
       - master
   schedule:
-    - cron: '10 3,12 * * *'
+    - cron: '15 0 * * *'
 
 jobs:
   build:
@@ -24,6 +24,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        sudo apt-get install tesseract-ocr 
     - name: Run report script
       env:
         STUID: ${{ secrets.Stuid }}
